Bug 1252100 - Imported profiles may have too long filename as the display label so sidebar is very huge, r=jsantell

--- a/devtools/client/themes/performance.css
+++ b/devtools/client/themes/performance.css
@@ -117,8 +117,12 @@
 
 /* Sidebar & recording items */
 
-#recordings-list {
+#recordings-pane {
   border-inline-end: 1px solid var(--theme-splitter-color);
+}
+
+#recordings-list {
+  max-width: 300px;
 }
 
 .recording-item {
